components/oauth2-proxy/auth/requestauthentication-productpage.yaml
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: productpage
  namespace: bookinfo
spec:
  selector:
    matchLabels:
      app: productpage
  jwtRules:
    - issuer: "https://dev-tqolyn342htgbviz.us.auth0.com/"
      jwksUri: https://dev-tqolyn342htgbviz.us.auth0.com/.well-known/jwks.json
      audiences:
        # - "https://bookinfo-istio-ingress.apps-crc.testing"
        - "https://somethingelse-istio-ingress.apps-crc.testing"
...
